--- a/events/templates/events/detail/event_detail.html
+++ b/events/templates/events/detail/event_detail.html
@@ -2,24 +2,18 @@
 {% load staticfiles %}
 {% block content %}  
 
-{% include 'events/detail/hidden.html' %}
-<div class='event-details container-fluid'>
-  <div class='row'>
-    {% include 'events/detail/panel.html' %}
-    
-    <div class='col'>
-      {% include 'events/detail/event_header.html' with template=template %}
-      
-      <div class='row'>
-        <div class='col-12'>
-          {% if not first_save %}
-            {% include 'events/detail/event_detail_board.html' %}
-          {% endif %}
+<section id='ed'>
+  {% include 'events/detail/hidden.html' %}
+  <div class='container-fluid'>
+    <div class='row'>
+      {% include 'events/detail/panel.html' %}
+      <div class='col'>
+        {% include 'events/detail/event_header.html'%}
+        {% include 'events/detail/ed-board.html' %}
       </div>
     </div>
-    
-  </div>
-</div>
+  <!--</div>-->
+</section>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/web-animations/2.3.1/web-animations.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
@@ -27,4 +21,5 @@
 <script src="https://unpkg.com/muuri@0.6.3/dist/muuri.min.js"></script>
 <script type="text/javascript" src="{% static 'events/js/events.js' %}"></script>
 <script type="text/javascript" src="{% static 'events/js/dragDrop.js' %}"></script>
+
 {% endblock %}
