--- a/events/templates/events/detail/hidden.html
+++ b/events/templates/events/detail/hidden.html
@@ -1,14 +1,12 @@
 <div class="board-column-content board-name shift-template d-none" id=''>
-  <input class="read-short added-role highlight-default" type="text" placeholder="#1">
+  <input class="read-short added-role default" type="text" placeholder="#1">
   <div class='input-container'>
     <input class="form-control col-3 name-input" type="text" list="json-datalist">
   </div>
-  <div class="board-item" style='margin-left:5px;'>
-    <div class="board-item-content added-role highlight-default">
-      Extra #1
-    </div>
+  <div class="board-item">
+    <div class="board-item-content added-role default">Extra #1</div>
   </div>
-  <input type="text" class="arrival-time highlight-default" placeholder="Time" aria-label="Arrival">
+  <input type="text" class="arrival-time default" placeholder="Time" aria-label="Arrival">
 </div>
   
 <datalist id="json-datalist"></datalist>
