Begin refactor of control panel categories

--- a/events/templates/events/detail/panel/active_locations.html
+++ b/events/templates/events/detail/panel/active_locations.html
@@ -1,5 +1,5 @@
 {% load staticfiles %} 
-<li class="list-group-item control-panel-item" style='background:linear-gradient(#9cc0fe, #b4adfe)'>
+<li class="list-group-item control-panel-item">
   <ul class="list-group">
     
     <li class="list-group-item py-2 toggle">
