--- a/events/templates/events/detail/panel/employees.html
+++ b/events/templates/events/detail/panel/employees.html
@@ -1,6 +1,6 @@
 {% load staticfiles %}
 
-<li class="list-group-item control-panel-item" style='background:linear-gradient(#ce98fd, #e980fc)'>
+<li class="list-group-item control-panel-item">
   <ul class="list-group">
     
     <li class="list-group-item py-2 toggle">
