--- a/events/templates/events/detail/panel/arrival_times.html
+++ b/events/templates/events/detail/panel/arrival_times.html
@@ -1,49 +1,31 @@
 {% load staticfiles %}
 
-<li class="list-group-item control-panel-item" style='background:linear-gradient(#b4adfe, #ce98fd)'>
+<li class="list-group-item control-panel-item">
   <ul class="list-group">
-    
     <li class="list-group-item py-2 toggle">
         <div class='panel-icon arrival-icon'></div>
         <div class='panel-label'>Arrival Times</div>
     </li>
-    
     <ul class="list-group inner">
-          <li class="list-group-item">
-            <div class='row'>
-              <div class='col-12'>
-                <select class="custom-select display-select" style='text-transform:capitalize;'>
-                  <option>Choose Position...</option>
-                  {% for role in roles %}
-                    <option class='arrival-category' id='{{role.verbose_name.0}}' value="{{role.verbose_name.0}}">{{role.verbose_name}}</option>
-                  {% endfor %}
-                </select>
-              </div>
-            </div>
-            
-            
-            <!--<div class='row'>-->
-            <!--  <div class='col-7 pr-0'>-->
-            <!--    <input type="text" class="form-control input-arrival" placeholder='e.g. 1:10PM'>-->
-            <!--  </div>-->
-            <!--  <div class='col-5'>-->
-            <!--    <button type="button" class="btn btn-dark btn-arrival">Update</button>-->
-            <!--  </div>-->
-            <!--</div>-->
-            
-            <div class="col-12 px-0 input-group">
-              <input type="text" class="input-arrival form-control" placeholder="e.g. 5:30PM">
-              <div class="input-group-append">
-                <button class="btn btn-dark btn-arrival" type="button">Update</button>
-              </div>
-            </div>
-            
-            
-            
-            
-          </li>
+      <li class="list-group-item">
+        <div class='row'>
+          <div class='col-12'>
+            <select class="custom-select display-select" style='text-transform:capitalize;'>
+              <option>Choose Position...</option>
+              {% for role in roles %}
+                <option class='arrival-category' id='{{role.verbose_name.0}}' value="{{role.verbose_name.0}}">{{role.verbose_name}}</option>
+              {% endfor %}
+            </select>
+          </div>
+        </div>
+        <div class="col-12 px-0 input-group">
+          <input type="text" class="input-arrival form-control" placeholder="e.g. 5:30PM">
+          <div class="input-group-append">
+            <button class="btn btn-dark btn-arrival" type="button">Update</button>
+          </div>
+        </div>
+      </li>
     </ul>
-    
   </ul>
 </li>
 
