--- a/events/templates/events/detail/panel/display.html
+++ b/events/templates/events/detail/panel/display.html
@@ -1,28 +1,14 @@
 {% load staticfiles %} 
 
-  <li class="list-group-item control-panel-item" style='background:linear-gradient(#83d6ff, #9cc0fe)'>
+  <li class="list-group-item control-panel-item">
     <ul class="list-group">
       <li class="list-group-item py-2 toggle">
         <div class='panel-icon display-icon'></div>
         <div class='panel-label'>Highlight</div>
       </li>
       <ul class="list-group inner">
-          <!--<li class="list-group-item">-->
-          <!--  <div class='row'>-->
-          <!--    <div class='col-12'>-->
-          <!--      <select class="custom-select display-select" style='text-transform:capitalize;'>-->
-          <!--        <option selected>Sort By...</option>-->
-          <!--        <option value="1">Category (Default)</option>-->
-          <!--        <option value="2">Location Name (Asc)</option>-->
-          <!--        <option value="3">Location Name (Desc)</option>-->
-          <!--        <option value="4"># of Positions</option>-->
-          <!--      </select>-->
-          <!--    </div>-->
-          <!--  </div>-->
-          <!--</li>-->
           <li class="list-group-item">
             <div class='row'>
-              <!--<div class='col-12'><span>Highlight:</span></div>-->
               <div class='col-12 pl-3'>
                   <div class="form-check" style='text-transform:capitalize;'>
                     <input class="form-check-input highlight-shifts" type="checkbox" value="" id="scheduled-shifts">
