Refactor and halve CSS files (600+ lines)

--- a/events/templates/events/detail/ed-board.html
+++ b/events/templates/events/detail/ed-board.html
@@ -11,7 +11,7 @@
         {% endfor %}
       </ul>
     </div>
-    <div class="loc-cards" id="pills-tabContent">
+    <div class="loc-cards d-inline-block" id="pills-tabContent">
       {% for cat, locNum in event_categories.items %}
           {% include 'events/detail/loc-card.html' %}
       {% endfor %}
