--- a/events/templates/events/detail/panel/display.html
+++ b/events/templates/events/detail/panel/display.html
@@ -1,30 +1,30 @@
 {% load staticfiles %} 
 
-  <li class="list-group-item control-panel-item">
-    <ul class="list-group">
-      <li class="list-group-item py-2 toggle">
-        <div class='panel-icon display-icon'></div>
-        <div class='panel-label'>Highlight</div>
-      </li>
-      <ul class="list-group inner">
-          <li class="list-group-item">
-            <div class='row'>
-              <div class='col-12 pl-3'>
-                  <div class="form-check" style='text-transform:capitalize;'>
-                    <input class="form-check-input highlight-shifts" type="checkbox" value="" id="scheduled-shifts">
-                    <label class="form-check-label" for="scheduled-shifts">
-                      Scheduled
-                    </label>
-                  </div>
-                  <div class="form-check" style='text-transform:capitalize;'>
-                    <input class="form-check-input highlight-shifts" type="checkbox" value="" id="unscheduled-shifts">
-                    <label class="form-check-label" for="unscheduled-shifts">
-                      Unscheduled
-                    </label>
-                  </div>
-              </div>
+<li class="list-group-item cp-item" id='highlight-shifts'>
+  <ul class="list-group ml-2">
+    <li class="list-group-item py-2 toggle">
+      <div class='panel-icon display-icon align-middle d-inline-block'></div>
+      <div class='panel-label align-middle d-inline-block ml-2'>Highlight</div>
+    </li>
+    <ul class="list-group inner">
+        <li class="list-group-item">
+          <div class='row'>
+            <div class='col-12 pl-3'>
+                <div class="form-check">
+                  <input class="form-check-input highlight-shifts" type="checkbox" value="" id="scheduled-shifts">
+                  <label class="form-check-label" for="scheduled-shifts">
+                    Scheduled
+                  </label>
+                </div>
+                <div class="form-check">
+                  <input class="form-check-input highlight-shifts" type="checkbox" value="" id="unscheduled-shifts">
+                  <label class="form-check-label" for="unscheduled-shifts">
+                    Unscheduled
+                  </label>
+                </div>
             </div>
-          </li>
-      </ul>
+          </div>
+        </li>
     </ul>
-  </li>
+  </ul>
+</li>
