--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -1,7 +1,7 @@
 body {
-    background:#F7F7F7;
-    color:#1b142d;
-    font-family:"Open Sans";
+  font-family:"Open Sans";
+  background:#F7F7F7;
+  color:#1B142D;
 }
 .company-logo {height:40px;}
 
@@ -48,14 +48,12 @@ td > a {font-weight:600;}
 	padding: 0px 8px;
 }
 .schedule-btn:hover span {background: transparent;}
-
+.schedule-header {padding: 0px 30px;}
 .title {
   font-weight: 300;
   text-transform:uppercase;
   font-size:1.6em;
 }
-
-.schedule-header {padding: 0px 30px;}
 
 .navbar {background-color: rgba(0,0,0,1);}
 
