--- a/staticfiles/css/scss.css
+++ b/staticfiles/css/scss.css
@@ -91,6 +91,47 @@
   border-right: 1px solid rgba(0, 0, 0, 0.125);
 }
 
+.event-header-details {
+  color: #5A626F;
+  font-weight: 500;
+  letter-spacing: 1px;
+  text-transform: lowercase;
+  font-size: 1.2em;
+}
+.event-header-details .event-title {
+  font-size: 1.5em;
+  font-weight: 500;
+}
+
+.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
+  background: none;
+  color: black;
+}
+
+.nav-link::before {
+  content: "";
+  display: block;
+  position: absolute;
+  bottom: 8px;
+  left: 0;
+  height: 6px;
+  width: 100%;
+  background: linear-gradient(to right, #83d6ff, #e881fc);
+  transform-origin: right top;
+  transform: scale(0, 1);
+  transition: color 0.1s, transform 0.2s ease-out;
+  z-index: -9999;
+}
+
+.nav-link:hover::before, .nav-link:focus::before, .nav-link.active::before {
+  transform-origin: left top;
+  transform: scale(1, 1);
+}
+
+.nav-link:first-child {
+  margin-left: 4px;
+}
+
 #loc-categories {
   margin: 0 91px 14px 20px;
   font-size: 1.2em;
@@ -105,39 +146,91 @@
   position: relative;
 }
 
-#loc-cards .board {
+.loc-cards .board {
   margin-bottom: 100px;
   position: absolute;
   width: 80vw;
 }
-#loc-cards .board-column {
+.loc-cards .board-column {
   box-shadow: #CACACA 0px 0px 12px;
   border-radius: 0px;
   width: 18vw;
   margin-left: 20px;
   background: #FFF;
 }
-#loc-cards .board-column .board-column-header {
+.loc-cards .board-column .board-column-header {
   height: 42px;
   background: none;
   color: #757575;
   margin: 12px 0px;
   padding: 0px 0px 12px 2px;
+  position: relative;
+  line-height: 30px;
+  overflow: hidden;
+  border-bottom: 1px solid #d2d2d2;
 }
-#loc-cards .board-column .board-column-header .location-title {
+.loc-cards .board-column .board-column-header .location-title {
   line-height: 2em;
   letter-spacing: 1px;
   font-size: 1.1em;
   font-weight: 400;
   vertical-align: bottom;
 }
-#loc-cards .board-column .board-column-header .add-shift {
+.loc-cards .board-column .board-column-header .add-shift {
   font-weight: 700;
   font-size: 1.2em;
   margin-top: -1px;
 }
-#loc-cards .board-column .board-item {
+.loc-cards .board-column .board-column-content {
+  width: 15.3vw;
+  position: relative;
+  border: 3px solid transparent;
+  min-height: 43px;
+  background: white;
+  left: 15px;
+}
+.loc-cards .board-column .read-short {
+  margin: 5px 0px;
+  padding: 4px;
+  width: 40px;
+  box-shadow: 0px 1px 3px 0 rgba(0, 0, 0, 0.2);
+  border: none;
+  font-size: 17px;
+  border-radius: 4px;
+  height: 34px;
+  text-align: center;
+}
+.loc-cards .board-column .board-item {
   margin-left: 5px;
+}
+.loc-cards .board-column .board-item .board-item-content {
+  font-weight: 100;
+  padding: 4px 4px 4px 10px;
+}
+.loc-cards .board-column .highlight.default {
+  border: 1px solid red;
+}
+.loc-cards .board-column .highlight.employeer {
+  border: 1px solid green;
+}
+
+.board {
+  position: relative;
+  margin-left: 1%;
+}
+
+.board-column {
+  position: absolute;
+  margin: 0px 10px 10px 0px;
+  border-radius: 3px;
+  display: inline-block;
+  padding: 0px 12px 10px 12px;
+}
+
+.employee-column-content {
+  position: relative;
+  border: 3px solid transparent;
+  min-height: 43px;
 }
 
 /*# sourceMappingURL=scss.css.map */
