--- a/events/templates/events/detail/event_header.html
+++ b/events/templates/events/detail/event_header.html
@@ -3,7 +3,7 @@
   <div class='col-12'>
     <div class="row px-4">
       <div class='col-12 py-4'>
-        <div class='row event-header-details' style='font-size:1.2em;font-family:"Source Sans Pro"'>
+        <div class='row event-header-details text-lowercase'>
           <div class='col-12'>
             <span class='event-title' style='font-size:1.5em;font-weight:100;' id='{{event.id}}'>{{event.title}}</span>
             <form class='float-right'>
