--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -3,6 +3,7 @@ body {
   background: #F7F7F7;
   color: #1B142D;
 }
+.navbar {background-color: rgba(0,0,0,1);}
 .company-logo {height:40px;}
 
 .page-link {background: rgba(256,256,256,.2); color: #000; border-radius:50px!important; margin-left: 2px; margin-right: 2px;}
@@ -55,8 +56,6 @@ td > a {font-weight:600;}
   font-size:1.6em;
 }
 
-.navbar {background-color: rgba(0,0,0,1);}
-
 .card-header.location-header {
   line-height: 12px;
   background:#99a0ab;
@@ -97,14 +96,6 @@ button.add-object {
     border-radius: 8px;
 }
 
-.event-title {
-    font-size: 1.5em;
-    color: #5a626f;
-    font-weight: 500;
-    font-family: 'Source Sans Pro';
-    letter-spacing: 1px;
-}
-
 #searchInput {color: black; font-weight: 700; background: rgba(0,0,0,0);}
 #searchInput::placeholder {color: black; opacity: 1;}
 #searchInput:-ms-input-placeholder { color: black; }
@@ -122,8 +113,6 @@ select:focus, textarea:focus, button:focus {outline: none!important; box-shadow:
 
 #eventTable {margin-top: 12px;}
 
-.chevron-down { height:20px; width:20px; display:inline-block; margin-left:2px; margin-right:2px; }
-
 .location-header input {height:17px; width:17px;}
 .location-header img {height:20px; width:20px;}
 .remove-location {height:20px; width:20px; display:none; margin-left: -31px;margin-top: 10px;margin-right: 11px;}
@@ -136,37 +125,11 @@ select:focus, textarea:focus, button:focus {outline: none!important; box-shadow:
 
 .location-header input {vertical-align:text-bottom; height:15px;}
 
-.employee-toggle {
-  display: flex;
-  -ms-flex-align: center;
-  align-items: center;
-  padding: .375rem .75rem;
-  margin-bottom: 0;
-  font-size: 1rem;
-  font-weight: 400;
-  line-height: 1.5;
-  color: #495057;
-  white-space: nowrap;
-  background-color: #e9ecef;
-  border: 1px solid #ced4da;
-  border-radius: .25rem;
-}
-
 .card-header {
-  font-family: Lato;
+  font-family: 'Lato';
   letter-spacing: 1px;
   color: #FFF;
 }
-
-.event-header-details {
-  color: #5a626f;
-  font-weight: 500;
-  font-family: 'Source Sans Pro';
-  letter-spacing: 1px;
-  text-transform: lowercase;
-  letter-spacing: 1px;
-}
-
 .bulk-arrival {
   line-height:1.2em;
   margin-left: 5px;
@@ -177,7 +140,6 @@ select:focus, textarea:focus, button:focus {outline: none!important; box-shadow:
   border-radius: 0px;
   padding-bottom:3px;
 }
-
 .input-group.mb-1 {
   background: white;
   border-radius: 5px;
@@ -187,23 +149,7 @@ select:focus, textarea:focus, button:focus {outline: none!important; box-shadow:
   height: 38px;
 }
 
-.remove-button {display:none;}
-
-.rotate {
-  -webkit-transform: rotate(90deg);
-  -moz-transform: rotate(90deg);
-  -o-transform: rotate(90deg);
-  -ms-transform: rotate(90deg);
-  transform: rotate(90deg);
-}
-.remove-employee {
-  transition: transform 0.5s;
-}
-.red-border {border: 1px solid red;}
-.red-border-background {border: 1px solid red; background: #f5f1f1;}
-
 .display-flex {display: flex;}
-
 .colorPickSelector {
   border-radius: 5px;
   width: 32px;
@@ -216,55 +162,10 @@ select:focus, textarea:focus, button:focus {outline: none!important; box-shadow:
   -o-transition: all linear .2s;
   transition: all linear .2s;
 }
+.colorPickSelector:hover {transform: scale(1.1);}
 
-.colorPickSelector:hover { transform: scale(1.1); }
 
-.board {
-  position: relative;
-  margin-left: 1%;
-}
-.board-column {
-  position: absolute;
-  width: 23%;
-  margin: 0 1.5%;
-  background:none;
-  border-radius: 3px;
-  z-index: 1;
-  display:inline-block;
-  padding: 0px 12px 10px 12px;
-}
-.board-column {
-  margin:0px 10px 10px 0px;
-  width:100%;
-}
-.board-column-header {
-  position: relative;
-  height: 30px;
-  line-height: 30px;
-  overflow: hidden;
-  background: #333;
-  color: #fff;
-  margin: 0px 16px;
-  border-bottom: 1px solid #d2d2d2;
-}
-@media (max-width: 600px) {
-  .board-column-header {text-indent: -1000px;}
-}
-.board-column.todo .board-column-header {background: #4A9FF9;}
-.board-column.working .board-column-header {background: #f9944a;}
-.board-column.done .board-column-header {background: #2ac06d;}
-.board-column-content {
-  position: relative;
-  border: 3px solid transparent;
-  min-height:43px;
-  background:white;
-  left:15px;
-}
-.employee-column-content {
-  position: relative;
-  border: 3px solid transparent;
-  min-height:43px;
-}
+
 .board-item, .employee-item {position: absolute; margin: 5px 0;}
 .board-item.muuri-item-releasing {z-index: 9998;}
 .board-item.muuri-item-dragging {z-index: 9999; cursor: move;}
@@ -281,23 +182,6 @@ select:focus, textarea:focus, button:focus {outline: none!important; box-shadow:
   width:167px;
 
 }
-@media (max-width: 600px) {
-  .board-item-content {text-align: center;}
-  .board-item-content span {display: none;}
-}
-.board-item-content {
-  font-family: "Source Sans Pro";
-  font-weight: 100;
-  padding: 4px 4px 4px 10px;
-  text-transform:capitalize;
-}
-.card-columns {column-count: 5;}
-
-.row-height{height: 100vh;}
-.left{
-  height: 100%;
-  overflow-y: scroll;
-}
 
 * {-ms-overflow-style: none !important;}
 ::-webkit-scrollbar {width: 0px; background: transparent;}
@@ -306,19 +190,7 @@ select:focus, textarea:focus, button:focus {outline: none!important; box-shadow:
 ::-moz-placeholder {text-align: center;}
 :-ms-input-placeholder {text-align: center;}
 
-.read-short{
-  margin:5px 0px;
-  padding:4px;
-  width:40px;
-  font-family: 'Source Sans Pro';
-  box-shadow: 0px 1px 3px 0 rgba(0,0,0,0.2);
-  border-width:1px;
-  border:none;
-  font-size:17px;
-  border-radius:4px;
-  height:34px;
-  text-align:center;
-}
+
 .arrival-time {
   height: 33px;
   margin: 5px 0 5px 0px;
@@ -363,11 +235,6 @@ select:focus, textarea:focus, button:focus {outline: none!important; box-shadow:
   border-bottom: 1px solid black;
 }
 
-.badge-primary {
-  background: linear-gradient(#84d5ff, #e783fd);
-    color: black;
-}
-
 @-webkit-keyframes 
 fill {  
   0% {width: 0%; height: 1px;}
@@ -387,31 +254,6 @@ fillColour {
   100% {color: #333;}
 }
 
-/*----------------------------------*/
-
-.nav-pills .nav-link.active, .nav-pills .show>.nav-link {
-  background:none;
-  color:black;
-}
-.nav-link::before {
-  content: '';
-  display: block;
-  position: absolute;
-  bottom: 8px;
-  left: 0;
-  height: 6px;
-  width: 100%;
-  background: linear-gradient(to right, #83d6ff, #e881fc);
-  transform-origin: right top;
-  transform: scale(0, 1);
-  transition: color 0.1s,transform 0.2s ease-out;
-  z-index: -9999;
-}
-.nav-link:hover::before, .nav-link:focus::before, .nav-link.active::before {
-    transform-origin: left top;
-    transform: scale(1, 1);
-}
-.nav-link:first-child {margin-left:4px!important;}
 #ed .list-group-item:last-child, #ed .list-group-item:first-child {
   border-radius: 0px;
 }
@@ -428,9 +270,6 @@ fillColour {
   height: auto;
   transition-property: width;
 }
-
-.default.highlight {border:1px solid red;}
-.employee.highlight {border:1px solid green;}
 .input-container, .name-input {
   border: none;
   width: 8.7vw;
@@ -442,7 +281,6 @@ fillColour {
   margin: 5px 0 5px 3px;
   padding: 0px;
 }
-
 .name-input {
   margin: 0px;
   padding: 4px 4px 4px 10px;
@@ -455,16 +293,8 @@ fillColour {
 .box-shadow {
   box-shadow: 0px 1px 3px 0 rgba(0,0,0,0.2)!important;
   transition: none;
-  
 }
 .box-shadow:focus {
   box-shadow: 0px 1px 3px 0 rgba(0,0,0,0.2)!important;
   color: rgb(51,51,51);
 }
-
-.shift-template, .board-name {
-  text-transform: uppercase;
-  width: 15.3vw;
-}
-
-.default {max-height:35px;}
